PBT-1: OpenAPI System domain is finished
