# src/System/Domain/Settings/Models/Attributes/Backup/Email.php
@@ -3,7 +3,9 @@
 namespace System\Domain\Settings\Models\Attributes\Backup;
 
 use App\Models\Abstracts\AbstractValue;
+use OpenApi\Attributes\Schema;
 
+#[Schema(schema: "System_Email", type: "string", format: "email",)]
 class Email extends AbstractValue
 {
     public function __construct(string $value)
